--- a/index.html
+++ b/index.html
@@ -1,79 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>San Joaquin Valley Town Hall</title>
-  <link rel="stylesheet" href="styles/main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>San Joaquin Valley Town Hall</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
-
 <body>
-  <header>
-    <img src="images/logo.png" alt="Town Hall logo">
+<header>
+    <img src="images/logo.png" alt="Town Hall Logo">
     <h1>San Joaquin Valley Town Hall</h1>
-    <h2>Celebrating our 75th Year</h2>
-  </header>
+    <p>Celebrating our 75<sup>th</sup> Year</p>
+</header>
 
-  <main>
+<main>
+    <!-- LEFT COLUMN -->
     <aside>
-      <h2>Guest Speakers</h2>
-      <p><strong>October</strong><br>
-         <a href="#">David Brancaccio</a></p>
-      <img src="images/brancaccio.jpg" alt="David Brancaccio">
+        <h2>Guest speakers</h2>
 
-      <p><strong>November</strong><br>
-         <a href="#">Andrew Ross Sorkin</a></p>
-      <img src="images/sorkin.jpg" alt="Andrew Ross Sorkin">
+        <h3>October</h3>
+        <a href="#"><img src="images/brancaccio.jpg" alt="David Brancaccio"></a>
+        <p><a href="#">David Brancaccio</a></p>
 
-      <p><strong>January</strong><br>
-         <a href="#">Amy Chua</a></p>
-      <img src="images/chua.jpg" alt="Amy Chua">
+        <h3>November</h3>
+        <a href="#"><img src="images/sorkin.jpg" alt="Andrew Ross Sorkin"></a>
+        <p><a href="#">Andrew Ross Sorkin</a></p>
 
-      <p><strong>February</strong><br>
-         <a href="#">Scott Sampson</a></p>
-      <img src="images/sampson.jpg" alt="Scott Sampson">
+        <h3>January</h3>
+        <a href="#"><img src="images/chua.jpg" alt="Amy Chua"></a>
+        <p><a href="#">Amy Chua</a></p>
+
+        <h3>February</h3>
+        <a href="#"><img src="images/sampson.jpg" alt="Scott Sampson"></a>
+        <p><a href="#">Scott Sampson</a></p>
     </aside>
 
+    <!-- RIGHT COLUMN -->
     <section>
-      <h2>Our Mission</h2>
-      <p>
-        San Joaquin Valley Town Hall is a non-profit organization that is run by
-        an all-volunteer board of directors. Our mission is to bring nationally and
-        internationally renowned, thought-provoking speakers who inform,
-        educate, and entertain our audience!
-      </p>
-      <blockquote>
-        “Each year I give a ticket package to each of our family members.
-        I think of it as the gift of knowledge... and that is priceless.”
-      </blockquote>
-
-      <h2>Our Ticket Packages</h2>
-      <ul>
-        <li>Season Package: $95</li>
-        <li>Patron Package: $200</li>
-        <li>Single Speaker: $25</li>
-      </ul>
-
-      <h1>Featured Speaker</h1>
-      <article class="featured">
-        <h2>Scott Sampson</h2>
-        <img src="images/sampson-featured.jpg" alt="Scott Sampson">
-        <h3>Fossil Threads in the Web of Life</h3>
+        <h2>Our Mission</h2>
         <p>
-          What’s 75 million years old and brand spanking new? A teenage
-          *Utahceratops*! Come to the Saroyan armed with your best dinosaur
-          roar, when Scott Sampson, Research Curator at the Utah Museum of
-          Natural History, steps to the podium. Sampson’s research has focused
-          on the ecology and evolution of late Cretaceous dinosaurs and he has
-          conducted fieldwork in several countries in Africa.
+            San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer
+            board of directors. Our mission is to bring nationally and internationally renowned,
+            thought-provoking speakers who inform, educate, and entertain our audience!
         </p>
-        <p><a href="#">Read more...</a> or <a href="#">meet us there!</a></p>
-      </article>
-    </section>
-  </main>
+        <blockquote>
+            “Each year I give a ticket package to each of our family members. I think of it as the gift
+            of knowledge… and that is priceless.”
+        </blockquote>
 
-  <footer>
-    <p>© San Joaquin Valley Town Hall, Fresno, CA 93755</p>
-  </footer>
+        <h1 class="featured-title">Featured Speaker</h1>
+        <article class="featured">
+            <h2>Fossil Threads in the Web of Life</h2>
+
+            <h3>February<br>Scott Sampson</h3>
+
+            <img src="images/dinosaur.jpg" alt="Scott Sampson with Dinosaur Fossil">
+
+            <p>
+                What’s 75 million years old and brand spanking new? A teenage Utahceratops!
+                Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson,
+                Research Curator at the Utah Museum of Natural History, steps to the podium.
+            </p>
+            <p>
+                Sampson’s research has focused on the ecology and evolution of late Cretaceous
+                dinosaurs and he has conducted fieldwork in a number of countries in Africa.
+            </p>
+
+            <p><a href="#">Read more...</a> Or meet us there!</p>
+        </article>
+
+        <h2>Our Ticket Packages</h2>
+        <ul>
+            <li>Season Package: $95</li>
+            <li>Patron Package: $200</li>
+            <li>Single Speaker: $25</li>
+        </ul>
+    </section>
+</main>
+
+<footer>
+    © San Joaquin Valley Town Hall, Fresno, CA 93755
+</footer>
 </body>
 </html>
+
