--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <h2>Guest speakers</h2>
 
         <h3>October</h3>
-        <a href="#"><img src="images/brancaccio.jpg" alt="David Brancaccio"></a>
+        <a href="#"><img src="brancaccio.jpg" alt="David Brancaccio"></a>
         <p><a href="#">David Brancaccio</a></p>
 
         <h3>November</h3>
-        <a href="#"><img src="images/sorkin.jpg" alt="Andrew Ross Sorkin"></a>
+        <a href="#"><img src="sorkin.jpg" alt="Andrew Ross Sorkin"></a>
         <p><a href="#">Andrew Ross Sorkin</a></p>
 
         <h3>January</h3>
-        <a href="#"><img src="images/chua.jpg" alt="Amy Chua"></a>
+        <a href="#"><img src="chua.jpg" alt="Amy Chua"></a>
         <p><a href="#">Amy Chua</a></p>
 
         <h3>February</h3>
-        <a href="#"><img src="images/sampson.jpg" alt="Scott Sampson"></a>
+        <a href="#"><img src="sampson.jpg" alt="Scott Sampson"></a>
         <p><a href="#">Scott Sampson</a></p>
     </aside>
 
@@ -54,7 +54,7 @@
 
             <h3>February<br>Scott Sampson</h3>
 
-            <img src="images/dinosaur.jpg" alt="Scott Sampson with Dinosaur Fossil">
+            <img src="dinosaur.jpg" alt="Scott Sampson with Dinosaur Fossil">
 
             <p>
                 What’s 75 million years old and brand spanking new? A teenage Utahceratops!
@@ -83,4 +83,5 @@
 </footer>
 </body>
 </html>
+
 
