--- a/index.html
+++ b/index.html
@@ -1,86 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>San Joaquin Valley Town Hall</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+
 <header>
-    <img src="images/logo.png" alt="Town Hall Logo">
-    <h1>San Joaquin Valley Town Hall</h1>
-    <p>Celebrating our 75<sup>th</sup> Year</p>
+    <img src="town_hall_logo.gif" alt="Town Hall Logo">
+    <h2>San Joaquin Valley Town Hall</h2>
+    <h3>Bringing cutting-edge speakers to the valley <em class="large">75</em> years</h3>
 </header>
 
 <main>
-    <!-- LEFT COLUMN -->
+    <!-- ASIDE: Guest Speakers -->
     <aside>
-        <h2>Guest speakers</h2>
+        <h2>Guest Speakers</h2>
 
-        <h3>October</h3>
-        <a href="#"><img src="brancaccio.jpg" alt="David Brancaccio"></a>
-        <p><a href="#">David Brancaccio</a></p>
+        <h3>October<br>
+            <a href="brancaccio.html">David Brancaccio</a>
+        </h3>
+        <img src="brancaccio75.jpg" alt="David Brancaccio image">
 
-        <h3>November</h3>
-        <a href="#"><img src="sorkin.jpg" alt="Andrew Ross Sorkin"></a>
-        <p><a href="#">Andrew Ross Sorkin</a></p>
+        <h3>November<br>
+            <a href="sorkin.html">Andrew Ross Sorkin</a>
+        </h3>
+        <img src="sorkin75.jpg" alt="Andrew Ross Sorkin image">
 
-        <h3>January</h3>
-        <a href="#"><img src="chua.jpg" alt="Amy Chua"></a>
-        <p><a href="#">Amy Chua</a></p>
-
-        <h3>February</h3>
-        <a href="#"><img src="sampson.jpg" alt="Scott Sampson"></a>
-        <p><a href="#">Scott Sampson</a></p>
+        <h3>January<br>
+            <a href="chua.html">Amy Chua</a>
+        </h3>
+        <img src="chua75.jpg" alt="Amy Chua image">
     </aside>
 
-    <!-- RIGHT COLUMN -->
+    <!-- SECTION: Mission, Packages, and Featured Speaker -->
     <section>
         <h2>Our Mission</h2>
-        <p>
-            San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer
-            board of directors. Our mission is to bring nationally and internationally renowned,
-            thought-provoking speakers who inform, educate, and entertain our audience!
-        </p>
+        <p>San Joaquin Valley Town Hall is a non-profit organization that is dedicated to bringing nationally known speakers to the San Joaquin Valley. The Town Hall’s goal is to increase interest in current events, cultural affairs, and the arts since 1937.</p>
         <blockquote>
-            “Each year I give a ticket package to each of our family members. I think of it as the gift
-            of knowledge… and that is priceless.”
+            <q>The Town Hall provides a forum for discussion of world issues.</q>
         </blockquote>
-
-        <h1 class="featured-title">Featured Speaker</h1>
-        <article class="featured">
-            <h2>Fossil Threads in the Web of Life</h2>
-
-            <h3>February<br>Scott Sampson</h3>
-
-            <img src="dinosaur.jpg" alt="Scott Sampson with Dinosaur Fossil">
-
-            <p>
-                What’s 75 million years old and brand spanking new? A teenage Utahceratops!
-                Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson,
-                Research Curator at the Utah Museum of Natural History, steps to the podium.
-            </p>
-            <p>
-                Sampson’s research has focused on the ecology and evolution of late Cretaceous
-                dinosaurs and he has conducted fieldwork in a number of countries in Africa.
-            </p>
-
-            <p><a href="#">Read more...</a> Or meet us there!</p>
-        </article>
 
         <h2>Our Ticket Packages</h2>
         <ul>
-            <li>Season Package: $95</li>
-            <li>Patron Package: $200</li>
-            <li>Single Speaker: $25</li>
+            <li>Season Ticket Holders</li>
+            <li>Group Ticket Packages</li>
+            <li>Single Event Tickets</li>
         </ul>
+
+        <h1>Featured Speaker</h1>
+        <article class="featured">
+            <h2>David Brancaccio</h2>
+            <img src="brancaccio75.jpg" alt="David Brancaccio Featured Speaker">
+            <p>David Brancaccio, host of public radio’s "Marketplace Morning Report," offers insights into the modern economy and the intersection of business, technology, and public policy.</p>
+            <p><a href="brancaccio.html">More about David Brancaccio</a></p>
+        </article>
     </section>
 </main>
 
 <footer>
-    © San Joaquin Valley Town Hall, Fresno, CA 93755
+    <p>&copy; San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 </footer>
+
 </body>
 </html>
 
